--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,27 @@ form,fieldset,input,textarea,p,blockquote,th,td {
     padding: 0;
     margin: 0;
 }
+
 a{
 	text-decoration:none;
-  color: #fff!important;
+  border: solid 1px #fff;
+	padding: 10px 20px;
+	font-weight: bold;
+	width: 150px;
+	text-align: center;
+	text-transform: uppercase;
+	margin-top: 10px;
+	color: #fff;
+	font-size: 15px;
+  letter-spacing: 1px;
+  text-decoration: none;
 }
 
-a:hover {color: #feb600!important}
+a:hover {
+  color: #ff7800;
+  text-decoration: none;
+}
+
 table {
     border-spacing: 0;
 }
@@ -35,11 +50,10 @@ caption,th {
 
 }
 h1,h2,h3,h4,h5,h6 {
-    font-weight: normal;
-    font-size: 100%;
-    margin:0;
-    padding:0;
-    color:#f2f2f2;
+  font-weight: 600;
+  font-family: 'Open Sans', sans-serif;
+  margin:0;
+  padding:0;
 }
 q:before,q:after {
     content:'';
@@ -51,38 +65,67 @@ abbr,acronym { border: 0;
  * --------------------------------------- */
 body{
 	font-family: 'Lato', Calibri, Arial, sans-serif;
-	color: #f2f2f2!important;
+	color: #f2f2f2;
 }
-h1{
-	font-size: 6em;
-}
+
+h1{}
 
 .section{ }
 
+.intro {z-index: 10000;}
+
+#overlay{
+  position:fixed;
+  z-index:99999;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  background:rgba(0,0,0,1);
+  transition: 1s 0.4s;
+}
+#progress{
+  height:5px;
+  background:#fff;
+  position:absolute;
+  width: 50%;
+  top:50%;
+}
+#progstat{
+  font-size:0.7em;
+  letter-spacing: 3px;
+  position:absolute;
+  top:50%;
+  margin-top:-40px;
+  width:100%;
+  text-align:center;
+  color:#ff7800;
+}
+
  /* Style for our header texts
 	* --------------------------------------- */
+
 	h1{
-	  font-weight: 600!important;
-	  text-transform: uppercase!important;
-	  font-family: 'Open Sans', sans-serif!important;
-	  font-size: 30px!important;
-		color: #feb600!important;
+	  font-size: 80px;
+		color: #ff7800;
+    text-transform: uppercase;
 	}
 
-  h2 {font-size:
-    font-weight: 600!important;
-    font-family: 'Open Sans', sans-serif!important;
-    font-size: 18px!important;
+  h2 {
+    font-size: 25px;
   }
 
-  /* History page
-	* --------------------------------------- */
+  h3 {
+    font-size: 20px;
+    color: #ff7800;
+    text-transform: uppercase;
+  }
 
-.history_wrapper {background-color: #000;}
-
-.history_bg_1 {}
-
-.history_title {padding: 10%;}
+  h4 {
+    font-size: 55px;
+    color: #67f2ff;
+    text-transform: uppercase;
+  }
 
 	/* Centered texts in each section
 	* --------------------------------------- */
@@ -96,7 +139,7 @@ h1{
 	#section1,
 	#section2,
 	#section3,
-  	#section4{
+  #section4 {
 		background-size: cover;
 	}
 
@@ -131,7 +174,6 @@ h1{
 		right: 0;
 		margin: 0 auto;
 		top: 30px;
-		color: #fff;
 	}
 
   .bg_top_1,
@@ -145,6 +187,7 @@ h1{
     top: 0;
     left: 0;
     background-size: cover;
+    z-index: -1;
   }
 
   .bg_top_1 {
@@ -181,6 +224,7 @@ h1{
     bottom: 0;
     right: 0;
     background-size: cover;
+    z-index: -1;
   }
 
   .bg_bottom_1 {
@@ -198,22 +242,22 @@ h1{
     animation: hideshow 3s 1.9s ease infinite;
   }
 
-  .bg_bottom_1 {
+  .bg_bottom_4 {
     background-image: url(../images/bottom_right_3.png);
     animation: hideshow 3s 2.1s ease infinite;
   }
 
-  .bg_bottom_4 {
+  .bg_bottom_5 {
     background-image: url(../images/bottom_right_4.png);
     animation: hideshow 3s 2.3s ease infinite;
   }
 
-  .bg_bottom_5 {
+  .bg_bottom_6 {
     background-image: url(../images/bottom_right_1.png);
     animation: hideshow 3s 2.5s ease infinite;
   }
 
-  .bg_bottom_1 {
+  .bg_bottom_7 {
     background-image: url(../images/bottom_right_5.png);
     animation: hideshow 3s 2.7s ease infinite;
   }
@@ -226,12 +270,12 @@ h1{
 	}
 
   .interview_intro {
-    margin: 30px;
+    position: absolute;
+    top: 5%;
+    left: 15%;
+    opacity: 1;
+    z-index: 10000;
   }
-
-	#interviews h1,
-  #interviews h2,
-	#interviews p {padding: 0px; margin: 0px;}
 
 	#section2{
 		background-color: #333;
@@ -247,46 +291,29 @@ h1{
 		top: 50px;
 	}
 
-	#interviews p{ font-size: 18px;}
-	#section2 p{ font-size: 18px;}
-  #section2 h1{ font-size: 30px;}
-
-	#section3{
+	#section3 {
 		background-image: url(../images/past_bg.png);
 		width: 100%;
 		height: 100%;
 
 	}
 
-  #section3 p{
-    color: #fff;
-	  font-size: 24px;
+  .future_intro {
+    display: block;
+    padding: 20px;
+    margin-bottom: 5%;
   }
-
-#section3 a {
-  border: solid 1px #fff;
-	padding: 10px 20px;
-	font-weight: bold;
-	width: 150px;
-	text-align: center;
-	text-transform: uppercase;
-	margin-top: 10px;
-	color: #fff;
-	font-size: 15px;
-  letter-spacing: 1px;
-  text-decoration: none;
-}
 
 .past_intro {
 	margin-left: 50%;
 	width: 550px;
 }
 
-  #section4{
+#section4 {
 	background-repeat: repeat;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
 	}
 
   #section4 .intro {
@@ -295,90 +322,6 @@ h1{
     margin: 0px auto;
   }
 
-  #section4 a {
-    border: solid 1px #fff;
-  	padding: 10px 20px;
-  	font-weight: bold;
-  	width: 150px;
-  	text-align: center;
-  	text-transform: uppercase;
-  	margin-top: 10px;
-  	color: #fff;
-  	font-size: 15px;
-    letter-spacing: 1px;
-    text-decoration: none;
-  }
-
-  #section4 h1{
-    z-index: 10000;
-  }
-
-  #section4 h4{
-    font-size: 30px;
-    line-height: normal;
-  }
-
-  #section4 h1,
-  #section4 p{
-    color: #fff;
-  }
-
-  .intro {
-
-  }
-
-  .overlay1,
-  .overlay2,
-  .overlay3,
-  .overlay4 {
-    position: absolute;
-    width: 540px;
-    height: 340px;
-    opacity: 0.5;
-    z-index: 10000;
-  }
-
-  .overlay1 {
-    background-image: url(../images/video_overlay_top_left.png);
-    top: 0;
-    left: 0;
-  }
-
-  .overlay2 {
-    background-image: url(../images/video_overlay_top_right.png);
-    top: 0;
-    right: 0;
-  }
-
-  .overlay3 {
-    background-image: url(../images/video_overlay_bottom_left.png);
-    bottom: 0;
-    left: 0;
-  }
-
-  .overlay4 {
-    background-image: url(../images/video_overlay_bottom_right.png);
-    bottom: 0;
-    right: 0;
-  }
-
-  #myVideo{
-    position: absolute;
-    z-index: 4;
-    right: 0;
-    bottom: 0;
-    top:0;
-    right:0;
-    width: 100%;
-    height: 100%;
-    background-size: 100% 100%;
-    opacity: 0.5;
-    background-color: black; /* in case the video doesn't fit the whole page*/
-    background-image: /* our video */;
-    background-position: center center;
-    background-size: contain;
-    object-fit: cover; /*cover video background */
-  }
 
   /*!
    * pagepiling.js 1.5.6
@@ -475,6 +418,7 @@ h1{
       height: 100%;
       cursor: pointer;
       text-decoration: none;
+      border: none;
   }
   #pp-nav li .active span,
   .pp-slidesNav .active span {
