--- a/css/main.css
+++ b/css/main.css
@@ -1,131 +1,5 @@
 @CHARSET "ISO-8859-1";
-/* Reset CSS
- * --------------------------------------- */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
-form,fieldset,input,textarea,p,blockquote,th,td {
-    padding: 0;
-    margin: 0;
-}
 
-a{
-	text-decoration:none;
-  border: solid 1px #fff;
-	padding: 10px 20px;
-	font-weight: bold;
-	width: 150px;
-	text-align: center;
-	text-transform: uppercase;
-	margin-top: 10px;
-	color: #fff;
-	font-size: 15px;
-  letter-spacing: 1px;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #ff7800;
-  text-decoration: none;
-}
-
-table {
-    border-spacing: 0;
-}
-fieldset,img {
-    border: 0;
-}
-address,caption,cite,code,dfn,em,strong,th,var {
-    font-weight: normal;
-    font-style: normal;
-}
-strong{
-	font-weight: bold;
-}
-ol,ul {
-    list-style: none;
-    margin:0;
-    padding:0;
-}
-caption,th {
-    text-align: left;
-
-}
-h1,h2,h3,h4,h5,h6 {
-  font-weight: 600;
-  font-family: 'Open Sans', sans-serif;
-  margin:0;
-  padding:0;
-}
-q:before,q:after {
-    content:'';
-}
-abbr,acronym { border: 0;
-}
-
-/* Custom CSS
- * --------------------------------------- */
-body{
-	font-family: 'Lato', Calibri, Arial, sans-serif;
-	color: #f2f2f2;
-}
-
-h1{}
-
-.section{ }
-
-.intro {z-index: 10000;}
-
-#overlay{
-  position:fixed;
-  z-index:99999;
-  top:0;
-  left:0;
-  bottom:0;
-  right:0;
-  background:rgba(0,0,0,1);
-  transition: 1s 0.4s;
-}
-#progress{
-  height:5px;
-  background:#fff;
-  position:absolute;
-  width: 50%;
-  top:50%;
-}
-#progstat{
-  font-size:0.7em;
-  letter-spacing: 3px;
-  position:absolute;
-  top:50%;
-  margin-top:-40px;
-  width:100%;
-  text-align:center;
-  color:#ff7800;
-}
-
- /* Style for our header texts
-	* --------------------------------------- */
-
-	h1{
-	  font-size: 80px;
-		color: #ff7800;
-    text-transform: uppercase;
-	}
-
-  h2 {
-    font-size: 25px;
-  }
-
-  h3 {
-    font-size: 20px;
-    color: #ff7800;
-    text-transform: uppercase;
-  }
-
-  h4 {
-    font-size: 55px;
-    color: #67f2ff;
-    text-transform: uppercase;
-  }
 
 	/* Centered texts in each section
 	* --------------------------------------- */
@@ -136,7 +10,7 @@ h1{}
 
 	/* Backgrounds will cover all the section
 	* --------------------------------------- */
-	#section1,
+	#home,
 	#section2,
 	#section3,
   #section4 {
@@ -157,15 +31,10 @@ h1{}
   }
 
   .logo {
-    background-image: url(../images/Logo.png);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 23%;
+    left: 33%;
     z-index: 1000;
-    background-size: cover;
   }
 
   #section1 h1{
@@ -269,16 +138,8 @@ h1{}
     text-align: left;
 	}
 
-  .interview_intro {
-    position: absolute;
-    top: 5%;
-    left: 15%;
-    opacity: 1;
-    z-index: 10000;
-  }
-
 	#section2{
-		background-color: #333;
+		background-color: #000;
     width: 100%;
     height: 100%;
 	}
@@ -360,11 +221,7 @@ h1{}
       /* custom */
   }
   #pp-nav {
-      position: fixed;
-      z-index: 100;
-      margin-top: -32px;
-      top: 50%;
-      opacity: 1;
+      display: none;
   }
   #pp-nav.right {
       right: 17px;
@@ -454,4 +311,55 @@ h1{}
   .pp-scrollable{
       overflow-y: scroll;
       height: 100%;
+  }
+
+
+  /*------------------------------------------------------*/
+  /* RESPONSIVE
+  /*------------------------------------------------------*/
+
+
+  @media only screen and (max-width: 576px){
+
+    .logo {left: 5%;}
+
+    .logo img {
+      width: 100%;
+    }
+
+		#section3 {
+			background-image: url(../images/past_bg_mobile.png);
+			background-color: #000;
+		}
+
+		.future_intro {
+			padding: 0px;
+			margin-bottom: 0px;
+		}
+
+		.past_intro {
+			margin-left: 0px;
+			width: 400px;
+			margin: 0px auto;
+			text-align: center;
+		}
+
+		#section4 .intro {
+	    text-align: center;
+	    width: 400px;
+	    margin: 0px auto;
+	  }
+
+  }
+
+  @media (min-width: 578px) and (max-width: 767px){
+
+
+
+  }
+
+
+  @media (min-width: 768px) and (max-width: 1200px){
+
+
   }
