--- a/css/thumbnail_image_left_carousel.css
+++ b/css/thumbnail_image_left_carousel.css
@@ -153,7 +153,28 @@
 
 }
 
-@media (min-width: 577px) and (max-width: 875px){
+@media (min-width: 577px) and (max-width: 1150px){
+
+  .thumbnail_image_left_carousel_indicators{
+    top: 0px;
+    right: 80%;
+    width: 20%;
+  }
+
+  .interview_intro {
+    top: 57%;
+    left: 25%;
+    width: 100%;
+  }
+
+  .thumbnail_image_left_carousel_caption{
+    left: 25%;
+    right: 0%;
+    width: 45%;
+    top: 75%;
+    text-align: left;
+    text-shadow: none;
+  }
 
   .thumbnail_image_left_carousel_caption a,
   .thumbnail_image_left_carousel_caption a:visited{
@@ -170,9 +191,10 @@
     font-size: 14px;
   }
 
+
 }
 
-@media (min-width: 876px) and (max-width: 1200px){
+@media (min-width: 1151px) and (max-width: 1200px){
 
   .thumbnail_image_left_carousel_caption h1{
     font-size: 25px;
