--- a/css/subpages.css
+++ b/css/subpages.css
@@ -72,11 +72,15 @@ html {width: 100%;}
   background-position: center top;
   background-attachment: fixed;
   background-image: url(../images/history_intro_1.png);
+  width: 100%;
+  height: 0;
+  padding-top: 52%;
 }
 
 .history_intro_title {
-  margin: 5%;
-  min-height: 500px;
+  position: absolute;
+  top: 15%;
+  left: 5%;
 }
 
 .visitor_intro {}
@@ -147,24 +151,25 @@ html {width: 100%;}
 }
 
 .history_quiz {
-  position: relative;
-    height: 1000px;
-    z-index: 1;
+  width: 100%;
+  height: 0;
+  padding-top: 52%;
 }
 
 .history_quiz_1 {
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center top;
-  background-attachment: fixed;
+  background-attachment: relative;
   background-image: url(../images/history_quiz_1.png);
+
 }
 
 .history_quiz_2 {
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center top;
-  background-attachment: fixed;
+  background-attachment: relative;
   background-image: url(../images/history_quiz_2.png);
 }
 
@@ -172,7 +177,7 @@ html {width: 100%;}
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center top;
-  background-attachment: fixed;
+  background-attachment: relative;
   background-image: url(../images/history_quiz_3.png);
 }
 
@@ -180,7 +185,7 @@ html {width: 100%;}
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center top;
-  background-attachment: fixed;
+  background-attachment: relative;
   background-image: url(../images/history_quiz_4.png);
 }
 
@@ -188,7 +193,7 @@ html {width: 100%;}
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center top;
-  background-attachment: fixed;
+  background-attachment: relative;
   background-image: url(../images/history_quiz_5.png);
 }
 
@@ -196,7 +201,7 @@ html {width: 100%;}
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center top;
-  background-attachment: fixed;
+  background-attachment: relative;
   background-image: url(../images/history_quiz_6.png);
 }
 
@@ -235,4 +240,63 @@ html {width: 100%;}
   -o-background-size: cover;
   background-size: cover;
   padding: 15% 5%;
+}
+
+@media only screen and (orientation: portrait) {
+
+  .history_intro_title {
+    top: 15%;
+  }
+
+  .history_intro_1 {
+    background-attachment: relative;
+    background-image: url(../images/history_intro_1.png);
+  }
+
+  .visitor {
+    width: 100%;
+  }
+
+}
+
+@media only screen and (max-width: 645px) {
+
+  .history_intro_title {
+    top: 15%;
+  }
+
+  .history_intro_1 {
+    background-attachment: relative;
+    background-image: url(../images/history_intro_1.png);
+  }
+
+  .visitor {
+    width: 100%;
+  }
+
+
+}
+
+@media (min-width: 646px) and (max-width: 1000px) {
+
+  .history_intro_title {
+    top: 15%;
+  }
+
+  .history_intro_1 {
+    background-attachment: relative;
+    background-image: url(../images/history_intro_1.png);
+  }
+
+  .visitor {
+    width: 50%;
+  }
+
+
+}
+
+@media (min-width: 767px) and (max-width: 1200px) {
+
+
+
 }
