--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
-@CHARSET "ISO-8859-1";
+
 /* Reset CSS
  * --------------------------------------- */
  body, html {
    height: 100%;
    margin: 0px;
+   padding: 0px;
  }
 
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
@@ -119,7 +120,7 @@ body{
 
 	h1{
     font-size: 50px;
-		color: #ff7800;
+		color: #fff;
     text-transform: uppercase;
 	}
 
@@ -150,6 +151,7 @@ body{
   #menu li {
   	display:inline-block;
   	margin: 10px 5px;
+    text-align: center;
   }
 
   #menu li.active{background-color: #ff7800;}
@@ -191,6 +193,7 @@ body{
   	padding: 0;
   	margin:0;
     background-color: #000;
+    overflow: hidden;
   }
 
 
@@ -199,7 +202,7 @@ body{
   /*------------------------------------------------------*/
 
 
-  @media only screen and (orientation: portrait) {
+@media only screen and (max-width: 576px) {
 
     h1{
       font-size: 35px;
@@ -223,6 +226,14 @@ body{
 
     .logo img {
       width: 100%;
+    }
+
+    #menu li a{
+    	text-decoration:none;
+      font-size: 10px;
+      padding: 2px 10px;
+      width: auto;
+      margin: 0px;
     }
 
   }
