--- a/css/subpages.css
+++ b/css/subpages.css
@@ -207,36 +207,42 @@
   background: url(../images/Cybele_Banner.png) no-repeat left center;
   float:left;
   width: 100%;
+  height: 0;
+  margin-top: 50px;
+  padding-top: 66.3%;
   background-color: #1E1E1E;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  padding: 15% 5%;
 }
 
 .interview_banner_barbara {
   background: url(../images/Barbara_Banner.png) no-repeat left center;
   float:left;
   width: 100%;
+  height: 0;
+  margin-top: 50px;
+  padding-top: 66.3%;
   background-color: #1E1E1E;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  padding: 15% 5%;
 }
 
 .interview_banner_lees {
   background: url(../images/Lees_Banner.png) no-repeat left center;
   float:left;
   width: 100%;
+  height: 0;
+  margin-top: 50px;
+  padding-top: 66.3%;
   background-color: #1E1E1E;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  padding: 15% 5%;
 }
 
 @media only screen and (orientation: portrait) {
