--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,8 @@
 	/* Centered texts in each section
 	* --------------------------------------- */
 	.section{
-
+			padding: 0px;
+			margin: 0px;
 	}
 
 
@@ -232,6 +233,8 @@
       vertical-align: middle;
       width: 100%;
       height: 100%;
+			padding: 0px;
+			margin: 0px;
   }
   .pp-slidesNav{
       position: absolute;
@@ -316,6 +319,47 @@
 
 @media only screen and (orientation: portrait) {
 
+
+
+	#section3 {
+		background-image: url(../images/past_bg_mobile.png);
+	}
+
+	.future_intro {
+		padding: 0px;
+		margin-bottom: 0px;
+	}
+
+	.past_intro {
+		margin-left: 0px;
+		width: 400px;
+		margin: 0px auto;
+		text-align: center;
+	}
+
+}
+
+@media only screen and (max-width: 576px) {
+	.logo img {width: 400px;}
+	.logo {width: 400px;}
+
+	.past_intro {
+		margin-left: 0px;
+		width: 300px;
+		margin: 0px auto;
+		text-align: center;
+	}
+
+	#section4 .intro {
+		text-align: center;
+		width: 300px;
+		margin: 0px auto;
+	}
+}
+
+
+@media (min-width: 577px) and (max-width: 980px) {
+
 	.logo img {width: 400px;}
 	.logo {width: 400px;}
 
@@ -341,43 +385,6 @@
 		width: 400px;
 		margin: 0px auto;
 	}
-
-}
-
-
-@media only screen and (max-width: 1000px) {
-
-	.logo img {width: 400px;}
-	.logo {width: 400px;}
-
-	#section3 {
-		background-image: url(../images/past_bg_mobile.png);
-		background-color: #000;
-	}
-
-	.future_intro {
-		padding: 0px;
-		margin-bottom: 0px;
-	}
-
-	.past_intro {
-		margin-left: 0px;
-		width: 400px;
-		margin: 0px auto;
-		text-align: center;
-	}
-
-	#section4 .intro {
-		text-align: center;
-		width: 400px;
-		margin: 0px auto;
-	}
-
-
-}
-
-@media (min-width: 767px) and (max-width: 1200px) {
-
 
 
 }
