--- a/css/styles.css
+++ b/css/styles.css
@@ -183,9 +183,9 @@ body{
   }
 
   #menu{
-  	position:fixed;
-  	top:0;
-  	left:0;
+  	position: fixed;
+  	top: 0;
+  	left: 0;
   	height: 50px;
   	z-index: 50;
   	width: 100%;
@@ -193,7 +193,13 @@ body{
   	margin:0;
     background-color: #000;
     overflow: hidden;
+    display: block;
   }
+
+  #menuToggle {
+    display: none;
+  }
+
 
 
   /*------------------------------------------------------*/
@@ -227,24 +233,97 @@ body{
       width: 100%;
     }
 
-    #menu li {
-    	display:inline-block;
-    	margin: 4px 2px;
-    }
-
-    #menu li a{
-    	text-decoration:none;
-      font-size: 10px;
-      padding: 2px 10px;
-      width: auto;
-      margin: 0px;
-    }
-
     #menu{
-
-    	height: 30px;
-      overflow: hidden;
+      display: none;
     }
+
+    /* Hamburger Menu
+     * --------------------------------------- */
+
+  #menuToggle {
+    display: block;
+    position: relative;
+    top: 20px;
+    left: 20px;
+    z-index: 100000000000;
+    -webkit-user-select: none;
+    user-select: none;
+  }
+
+  #menuToggle input {
+    display: block;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+    -webkit-touch-callout: none;
+  }
+
+  #menuToggle span {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    background: #fff;
+    border-radius: 3px;
+    z-index: 10000000000000;
+    transform-origin: 4px 0px;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+  }
+
+  #menuToggle span:first-child {
+    transform-origin: 0% 0%;
+  }
+
+  #menuToggle span:nth-last-child(2) {
+    transform-origin: 0% 100%;
+  }
+
+  #menuToggle input:checked ~ span {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(3) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+
+  #menuToggle input:checked ~ span:nth-last-child(2) {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+
+  #menu_burger {
+    position: absolute;
+    width: 100%;
+    margin: -20px;
+    padding: 20px;
+    padding-top: 75px;
+    background: #000;
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+
+  #menu_burger li {
+    padding: 10px 0;
+    font-size: 22px;
+  }
+
+  #menuToggle input:checked ~ ul
+  {
+    transform: none;
+  }
 
   }
 
